# pyevtk

./: .flake8  .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  README.txt  dev.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  versioneer.py  vtk.pyx
.github/workflows/: black.yml  deploy.yml  test.yml  test_deploy.yml
evtk/: __init__.py
examples/: group.py  image.py  lines.py  lowlevel.py  points.py  poly_lines.py  rectilinear.py  structured.py  unstructured.py  unstructured.vtu
pyevtk/: __init__.py  _version.py  evtk.py  hl.py  vtk.py  xml.py
src/: LICENSE  cevtk.c  cevtk.pyx  evtk.py  hl.py  vtk.py  xml.py
src/examples/: group.py  image.py  lowlevel.py  points.py  rectilinear.py  structured.py
tests/: dummy.py
