[build-system]
requires = ["setuptools>=61", "wheel", "versioneer[toml]>=0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "pyevtk"
dynamic = ["version"]
description = "Export data as binary VTK files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Paulo Herrera", email = "pauloa.herrera@gmail.com"},
]
maintainers = [
    {name = "Adamos Kyriakou", email = "somada141@gmail.com"},
    {name = "Xylar Asay-Davis", email = "xylarstorm@gmail.com"},
    {name = "René Fritze"},
]
requires-python = ">=3.7"
dependencies = ["numpy>=1.8.0"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/pyscience-projects/pyevtk"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=3.1",
    "pytest-cov",
    "codecov",
    "twine",
    "check-manifest",
    "readme_renderer[md]",
    "black>=26.0,<27.0",
    "pre-commit",
]

[tool.setuptools.packages.find]
include = ["pyevtk*", "evtk*"]

[tool.setuptools.package-data]
pyevtk = ["LICENSE.txt", "examples/*.py"]

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "pyevtk/_version.py"
versionfile_build = "pyevtk/_version.py"
tag_prefix = "v"
parentdir_prefix = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests/*.py"]
python_classes = ["Test"]
addopts = "--cov pyevtk"

[tool.black]
line-length = 88
required-version = "26"
